Update SymbolTable 5/5 tests ok ;)